--- a/client/public/styles.css
+++ b/client/public/styles.css
@@ -242,7 +242,14 @@ footer {
 }
 
 #lobby-code {
-    font-size: 1.5rem;
+    cursor: pointer;
+    font-size: 1.5rem;   
+}
+
+.has-code code {
+    cursor: pointer;
+    display: inline-flex;
+    align-items: center;
 }
 
 code {
